erDiagram

  USER {
    Long id PK
    string username
    string password
    Role role
    %% role(enum): agent | modo | admin
  }

  CATEGORY {
    Long id PK
    string name
    int parent_id FK
  }

  PROBLEM {
    Long id PK
    string titre
    string description
    string image_url
    int CATEGORY_id FK
  }

  NEWS {
    int id PK
    string title
    string content
    datetime creation_time
    NewsType(Long) type FK
    int auteur_id FK
  }

  NOTIFICATION {
    int id PK
    int utilisateur_id FK
    int NEWS_id FK
    string statut
  }

  ABONNEMENT {
    int utilisateur_id PK
    int CATEGORY_id PK
  }

  FAVORIS {
    int utilisateur_id PK
    int CATEGORY_id PK
  }

  CATEGORY ||--o{ CATEGORY : parent
  CATEGORY ||--o{ PROBLEM : contient
  USER ||--o{ PROBLEM : consulte
  USER ||--o{ ABONNEMENT : s_abonne
  CATEGORY ||--o{ ABONNEMENT : est_abonnement
  USER ||--o{ FAVORIS : met_en_favori
  CATEGORY ||--o{ FAVORIS : est_favori
  USER ||--o{ NEWS : cree
  NEWS ||--o{ NOTIFICATION : genere
  USER ||--o{ NOTIFICATION : recoit